# gastos-comunidad

./: .htaccess  GestionGastos.bat  LICENSE  LanzarApp.bat  README.md  index.html  index.php  launcher.ps1  package-lock.json  package.json  personal-debts.html  prueba.txt  tsconfig.app.json  vite.config.ts
api/: categories.php  config.php  diagnostico.php  expenses.php  index.php  personal-debts.php  test.php  update-password.php
api/admin/: check-auth.php  clear-personal-debts.php  delete-old-transactions.php  login.php  optimize-database.php  restore-categories.php  simple-clear-db.php
api/config/: database.php
api/models/: Category.php  Expense.php
assets/: index-6iHxV2M8.css  index-B-h85E4P.css  index-BItMy3Ih.js  index-BPlCoIJB.js  index-BQqjhDc2.js  index-C-wy5X1Q.js  index-CFUQx3Mb.js  index-CTWrGPOH.css  index-DOz8IvSK.js  index-DbJrIJhL.js  index-fk7oC39y.css
assets/assets/: index-C-Gr0rNL.css  index-VKcJ2JtY.js
database/: admin_users.sql  create_admin_users.sql  create_personal_debts.sql  schema.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/admin/: AdminPanel.tsx  AdminTransactionList.tsx  LoginModal.tsx  PersonalDebtAdminList.tsx
src/components/dashboard/: CategorySummary.tsx  ChartSelector.tsx  (+4 more)
src/context/: AuthContext.tsx  ExpenseContext.tsx
src/data/: initialData.ts
src/types/: index.ts  tauri.d.ts
src/utils/: api.ts  excel.ts  helpers.ts  tauri.ts
src/views/: AdminTransactions.tsx  Categories.tsx  Charts.tsx  Dashboard.tsx  PersonalDebts.tsx  Transactions.tsx
(+13 files in other folders)
