[package]
name = "gestion_gastos"
version = "0.1.0"
description = "Aplicación de Gestión de Gastos"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["shell-open"] }
tauri-plugin-log = "2.0.0-rc"
open = "5.0.0"
tauri-plugin-shell = { version = "2.0.0-rc", features = ["open"] }
